working on styling

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                     <aside id="technologies">
                         <h3 class="section-title">Tech Stack</h3>
                         <div class="tech-item-container">
-                            <div class="tech-item"><i class="fa-brands fa-html5"></i><p>HTML</p></div>
+                            <div class="tech-item"><i class="fa-brands fa-html5" ></i><p>HTML</p></div>
                             <div class="tech-item"><i class="fa-brands fa-css3-alt"></i><p>CSS</p></div>
-                            <div class="tech-item"><i class="fa-brands fa-js"></i><p>javascript</p></div>
+                            <div class="tech-item"><i class="fa-brands fa-js"></i><p>Javascript</p></div>
                             <div class="tech-item" style="padding-top: 6px"><img src="./img/typescript.svg"></img><p>TypeScript</p></div>
                             <div class="tech-item"><i class="fa-brands fa-react"></i><p>React</p></div>
                             <div class="tech-item"><i class="fa-brands fa-node-js"></i><p>Node.js</p></div>
@@ -75,11 +75,16 @@
             <div class="project-container">
                 <div class="content-container">
                     <h3>Budget Tool</h3>
-                    <p>description of the budget tool. Fully functional react app bla bla bla</p>
+                    <p>
+                        This is a budget tool i created to use for my personal income and spending tracking.
+                        It is built using React for the front end and Nodejs + Express for the back end api.
+                        Data is stored in a MySql database and encrypted using the Bcrypt npm library.
+                        <br><span>React, Node, Express, MySql</span> 
+                    </p>
                     <a class="visit-project-btn" href="http://budgettool.matthewvogee.com" target="_blank">View Project</a>
                 </div>
                 <div class="img-container">
-                    <img class="project-img" src="#">
+                    <img class="project-img" alt="Budget tool screenshot" src="./img/budgetToolCover.png">
                 </div>
             </div>
         </article>
