navigation pop in and out on scrolling up and down and style updates.

--- a/index.html
+++ b/index.html
@@ -14,24 +14,23 @@
         <script src="https://kit.fontawesome.com/56794fbcf6.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <nav>
-            <div class="nav-left">
-                <i class="fa-solid fa-m"></i>
-                <ul>
-                    <li><a href="#about">.About</a></li>
-                    <li><a href="#projects">.Projects</a></li>
-                    <li><a href="#contact">.Contact</a></li>
-                    <li><a href="#" target="_blank">.Resume</a></li>
-                </ul>
-            </div>
-            <div id="socials" class="nav-right">
-                <a href="https://linkedin.com/in/matthewvogee" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="https://github.com/mvogee" target="_blank"><i class="fa-brands fa-github"></i></a>
-            </div>
-
-        </nav>
         <header>
-
+            <nav>
+                <div class="nav-left">
+                    <i class="fa-solid fa-m"></i>
+                    <ul>
+                        <li><a href="#about">.About</a></li>
+                        <li><a href="#projects">.Projects</a></li>
+                        <li><a href="#contact">.Contact</a></li>
+                        <li><a href="#" target="_blank">.Resume</a></li>
+                    </ul>
+                </div>
+                <div id="socials" class="nav-right">
+                    <a href="https://linkedin.com/in/matthewvogee" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://github.com/mvogee" target="_blank"><i class="fa-brands fa-github"></i></a>
+                </div>
+    
+            </nav>
             <div class="introduction">
                 <p id="greeting" class="accent-text">Hi, My name is</p>
                 <div class="heading">
@@ -149,6 +148,6 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         
-        <script src="" async defer></script>
+        <script src="./js/navscroll.js" async defer></script>
     </body>
 </html>
