--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <meta name="description" content="Portfolio website for Matthew Vogee. Frontend developer.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./css/default.css">
+        <link rel="stylesheet" href="./css/media-queries.css">
         <script src="https://kit.fontawesome.com/56794fbcf6.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -19,17 +20,19 @@
                 <div class="nav-left">
                     <i class="fa-solid fa-m"></i>
                     <ul>
-                        <li><a href="#about">.About</a></li>
-                        <li><a href="#projects">.Projects</a></li>
-                        <li><a href="#contact">.Contact</a></li>
-                        <li><a href="#" target="_blank">.Resume</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#projects">Projects</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#" target="_blank">Resume</a></li>
                     </ul>
                 </div>
                 <div id="socials" class="nav-right">
                     <a href="https://linkedin.com/in/matthewvogee" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
                     <a href="https://github.com/mvogee" target="_blank"><i class="fa-brands fa-github"></i></a>
                 </div>
-    
+                <div class="mobile-nav-btn nav-btn-flipped">
+                    <i class="fa-solid fa-angle-down"></i>
+                </div>
             </nav>
             <div class="introduction">
                 <p id="greeting" class="accent-text">Hi, My name is</p>
@@ -53,7 +56,7 @@
                             Just enough info to intrigue but not enough to turn off anybody.</p>
                     </div>
                     <aside id="technologies">
-                        <h3 class="section-title">Tech Stack</h3>
+                        <h3 class="section-title">Technologies</h3>
                         <div class="tech-item-container">
                             <div class="tech-item"><i class="fa-brands fa-html5" ></i><p>HTML</p></div>
                             <div class="tech-item"><i class="fa-brands fa-css3-alt"></i><p>CSS</p></div>
@@ -149,5 +152,7 @@
         <![endif]-->
         
         <script src="./js/navscroll.js" async defer></script>
+        <script src="./js/formSubmission.js" async defer></script>
+        <script src="./js/mobile-nav.js" async defer></script>
     </body>
 </html>
