updated content, line spacing

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
                 </div>
             </nav>
             <div class="introduction">
-                <p id="greeting" class="accent-text">Hi, My name is</p>
+                <p id="greeting" class="accent-text">Hello there, my name is</p>
                 <div class="heading">
                     <h1>Matthew Vogee</h1>
                     <h1 class="whoiam">I'm a front-end developer</h1>
                 </div>
-                <p class="whoiam">Take a look at my work and feel free to dap me up.</p>
+                <p class="whoiam">I make the web work. Simple, elegant, accessible.</p>
             </div>
         </header>
 
@@ -56,8 +56,19 @@
                 <hr>
                 <div id="about-content-container">
                     <div class="about-text">
-                        <p>I'm a web developer bla bla bla i do stuff and i need to keep this short and sweet.
-                            Just enough info to intrigue but not enough to turn off anybody.</p>
+                        <p>
+                            I am a web developer obsessed with continual learning and improving my skills. 
+                            My journey started, like many developers, when I was young with an obsession 
+                            for video games and digital art. I studied graphic design in college and, 
+                            after I graduated, got the opportunity to move to the Bay Area to study 
+                            computer science at 42. At 42, I got the authentic silicon valley experience, 
+                            coding my days away in the computer lab day after day, attending hackathons, 
+                            and developing my skills as a developer. Since then, I have continued to hone 
+                            my craft and explore the vast field of web development. I have worked in 
+                            multiple industries in pursuit of learning new skills and obtaining new 
+                            perspectives on work and life. Outside work, I am a husband, avid golfer, 
+                            snowboarder, and star wars fan.
+                        </p>
                     </div>
                     <aside id="technologies">
                         <h3 class="section-title">Technologies</h3>
@@ -106,7 +117,7 @@
                         description and pictures of the project.
                     </p>
                     <p class="project-stack">React, Node, Express, MongoDB</p>
-                    <a class="visit-project-btn" href="http://budgettool.matthewvogee.com/landingPage" target="_blank">View Project</a>
+                    <a class="visit-project-btn" href="https://github.com/mvogee/Price_scraper_frontEnd" target="_blank">View Project</a>
                 </div>
                 <div class="img-container">
                     <img class="project-img" alt="Budget tool screenshot" src="./img/price_scraper_tool.png">
@@ -121,7 +132,7 @@
                         Password generator allowing the user to select password length, and to include special characters, numbers, or caps. 
                     </p>
                     <p class="project-stack">React, Typescript, CSS</p>
-                    <a class="visit-project-btn" href="http://budgettool.matthewvogee.com/landingPage" target="_blank">View Project</a>
+                    <a class="visit-project-btn" href="https://github.com/mvogee/password_generator" target="_blank">View Project</a>
                 </div>
                 <div class="img-container">
                     <img class="project-img" alt="Password generator screenshot" src="./img/Pw_gen_screenshot.png">
