--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
                 <div class="content-container">
                     <h3>Budget Tool</h3>
                     <p class="project-description">
-                        This is a budget tool i created to use for my personal income and spending tracking.
-                        It is built using React for the front end and Nodejs + Express for the back end api.
-                        Data is stored in a MySql database and encrypted using the Bcrypt npm library.
-                        Deployed using AWS.
+                        I created the budget tool to simplify the management of my budget. 
+                        I got tired of playing with spreadsheets and decided to create something quick 
+                        and easy to use. The budget tool features visual charts for insights and progress, 
+                        category creation, income calculation, and income and spending tracking.
                     </p>
                     <p class="project-stack">React, Node, Express, MySql</p>
                     <a class="visit-project-btn" href="http://budgettool.matthewvogee.com/landingPage" target="_blank">View Project</a>
@@ -111,10 +111,13 @@
                     <h3>Electrical Materials Scraper</h3>
                     
                     <p class="project-description">
-                        This program scrapes products and prices from electrical material suppliers websites.
-                        The user can use this interface to search the database of scraped products. Hosted on AWS.
-                        The server is not currently running but you can visit the github repo to see a more in depth
-                        description and pictures of the project.
+                        I created this project to use in conjunction with my employer's business 
+                        software in its job bidding functionality. The idea originated when I saw 
+                        that we manually updated product pricing on every job bid. I came to the team 
+                        with the idea to build a scraper to continually update the product pricing by 
+                        scraping the products from the websites and connecting that information to our 
+                        database. The front-end is a tool I created to show off the project's capabilities 
+                        and search the database.
                     </p>
                     <p class="project-stack">React, Node, Express, MongoDB</p>
                     <a class="visit-project-btn" href="https://github.com/mvogee/Price_scraper_frontEnd" target="_blank">View Project</a>
@@ -132,7 +135,7 @@
                         Password generator allowing the user to select password length, and to include special characters, numbers, or caps. 
                     </p>
                     <p class="project-stack">React, Typescript, CSS</p>
-                    <a class="visit-project-btn" href="https://github.com/mvogee/password_generator" target="_blank">View Project</a>
+                    <a class="visit-project-btn" href="https://mv-password-generator.herokuapp.com" target="_blank">View Project</a>
                 </div>
                 <div class="img-container">
                     <img class="project-img" alt="Password generator screenshot" src="./img/Pw_gen_screenshot.png">
