changes to font sizing, section width and spacing

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             to hone my craft and explore the vast field of web development. I have worked 
                             in multiple industries in pursuit of learning new skills and obtaining new 
                             perspectives on work and life. Outside of work, I am a husband, avid golfer, 
-                            snowboarder, and star wars fan
+                            snowboarder, and star wars fan.
                         </p>
                     </div>
                     <aside id="technologies">
