--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
         <title>Matthew Vogee. Front end developer</title>
         <meta name="description" content="Portfolio website for Matthew Vogee. Front end developer.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <meta property="og:title" content="Matthew Vogee"/>
+        <meta name="image" property="og:image" content="./img/thumbnail.png"/>
+        <meta property="og:url" content="www.matthewvogee.com"/>
+        <meta property="og:image:width" content="1200" />
+        <meta property="og:image:height" content="627" />
+        <meta property="og:type" content="website" />
+        <meta property="og:description" content="Portfolio website for Matthew Vogee. Front end developer." />
+        <link rel="image_src" href="./img/thumbnail.png" />
+
         <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io//favicon-16x16.png">
