hide mobile nav by default until user clicks button.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </head>
     <body>
         <header>
-            <nav>
+            <nav class="nav-mobile-hide">
                 <div class="nav-left">
                     <i class="fa-solid fa-m"></i>
                     <ul>
