--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <a href="https://linkedin.com/in/matthewvogee" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
                     <a href="https://github.com/mvogee" target="_blank"><i class="fa-brands fa-github"></i></a>
                 </div>
-                <div class="mobile-nav-btn nav-btn-flipped">
+                <div class="mobile-nav-btn">
                     <i class="fa-solid fa-angle-down"></i>
                 </div>
             </nav>
